--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
@@ -24,6 +24,7 @@
                        <th>浏览量</th>
                        <th>文章状态</th>
                        <th>文章分类</th>
+                       <th>最新修改时间</th>
                        <th>操作</th>
                    </tr>
                </thead>
@@ -35,6 +36,7 @@
                            <td><span th:text="${content.hits}"/></td>
                            <td><span class="label label-success" th:text="已发布"/> </td>
                            <td><span th:text="${content.categories}"/></td>
+                           <td><span th:text="${content.modified}"/></td>
                            <td><a th:href="@{'/admin/index/editContent?cid='+${content.cid}}"
                                   class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                    class="fa fa-edit"></i> <span>编辑</span></a>
@@ -53,6 +55,7 @@
                            <td><span th:text="${content.hits}"/></td>
                            <td><span class="label label-default" th:text="草稿"/></td>
                            <td><span th:text="${content.categories}"/></td>
+                           <td><span th:text="${content.modified}"/></td>
                            <td>
                                <a  th:href="@{'/admin/index/editContent?cid='+${content.cid}}"
                                   class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
