--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/foot.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/foot.html
@@ -10,8 +10,8 @@
         <img src="/images/photo.jpg" class="footphoto">
         <ul class="footinfo">
             <p class="fname"><a href="/dancesmile" >青轻飞扬</a>  </p>
-            <p class="finfo">性别：女 年龄：25岁</p>
-            <p>现居：四川成都</p></ul>
+            <p class="finfo">性别：未知 年龄：保密</p>
+            <p>现居：保密</p></ul>
     </div>
     <section class="visitor">
         <h2>最近访客</h2>
