--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
@@ -15,42 +15,48 @@
   <div class="right-product my-index right-full">
      <div class="container-fluid">
 	   <div class="info-center">
-           <div class="row" >
 
-               <h3 style="padding-left: 15px">分类管理</h3>
+             <div class="row panel panel-primary" style="margin-top: 10px;margin-left: 6px;margin-right: 6px;">
+                     <div class="panel-heading"><h3 class="panel-title">分类管理</h3></div>
 
-               <div class="col-md-12">
-                   <table class="table table-striped table-bordered">
-                       <thead>
-                       <tr>
-                           <th>分类名称</th>
-                           <th>分类描述</th>
-                           <th>文章数</th>
-                           <th>操作</th>
-                       </tr>
-                       </thead>
-                       <tbody>
+                    <div class="col-md-12" style="padding-top: 10px">
+                                    <table class="table table-striped table-bordered">
+                                        <thead>
+                                        <tr>
+                                            <th>分类名称</th>
+                                            <th>分类描述</th>
+                                            <th>文章数</th>
+                                            <th>操作</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
 
-                       <div th:each="link : ${allClassify.data}">
-                           <tr mid="8">
-                               <td><label th:text="${link.name}"/></td>
-                               <td><label th:text="${link.description}"/></td>
-                               <td><label >0</label></td>
-                               <td>
-                                   <a href="javascript:void(0)"  th:onclick="'javascript:editCategory('+${link.mid}+')'"
-                                      class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
-                                           class="fa fa-edit"></i> <span>编辑</span></a>
-                                   <a href="javascript:void(0)" th:onclick="'javascript:delCategory('+${link.mid}+')'"
-                                      class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
-                                           class="fa fa-trash-o"></i> <span>删除</span></a>
-                               </td>
-                           </tr>
+                                        <div th:each="link : ${allClassify.data}">
+                                            <tr mid="8">
+                                                <td><label th:text="${link.name}"/></td>
+                                                <td><label th:text="${link.description}"/></td>
+                                                <td><label>0</label></td>
+                                                <td>
+                                                    <a href="javascript:void(0)"
+                                                       th:onclick="'javascript:editCategory('+${link.mid}+')'"
+                                                       class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
+                                                            class="fa fa-edit"></i>
+                                                        <span>编辑</span>
+                                                    </a>
+                                                    <a href="javascript:void(0)"
+                                                       th:onclick="'javascript:delCategory('+${link.mid}+')'"
+                                                       class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
+                                                            class="fa fa-trash-o"></i>
+                                                        <span>删除</span>
+                                                    </a>
+                                                </td>
+                                            </tr>
 
-                       </div>
+                                        </div>
 
-                       </tbody>
-                   </table>
-                   <div id="page" style="width: 100%;height: auto;text-align: right;margin-top: -20px">
+                                        </tbody>
+                                    </table>
+                                    <div id="page" style="width: 100%;height: auto;text-align: right;margin-top: -20px">
 
                        <label  th:each="pagebar : ${allClassify.pageBar}">
 
@@ -83,8 +89,11 @@
                            </li>
                        </ul>
                    </div>
+                    </div>
                </div>
-           </div>
+
+
+
            <div class="row">
                <div class="col-md-12" style="padding: 20px;margin-top: -20px">
                    <div class="panel panel-primary">
@@ -116,7 +125,7 @@
                </div>
 
            </div>
-       </div>			
+       </div>
 	 </div>
   </div>
 </div>
