--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/links.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/links.html
@@ -17,9 +17,10 @@
 	   <div class="info-center">
            <div class="row" >
 
-               <h3 style="padding-left: 15px">友链管理</h3>
+               <div class="panel panel-primary" style="margin-top: 10px;margin-left: 20px;margin-right: 20px;">
+                     <div class="panel-heading"><h3 class="panel-title">友链管理</h3></div>
 
-               <div class="col-md-12">
+               <div class="col-md-12" style="margin-top: 10px;">
                    <table class="table table-striped table-bordered">
                        <thead>
                        <tr>
@@ -61,7 +62,8 @@
 
                        </tbody>
                    </table>
-                   <div id="page" style="width: 100%;height: auto;text-align: right;margin-top: -20px">
+               </div>
+                   <div id="page" style="width: 100%;height: auto;padding-right: 20px;text-align: right;margin-top: -30px">
 
                        <label  th:each="pagebar : ${links.pageBar}">
 
