--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
@@ -27,8 +27,10 @@
   <div class="right-product my-index right-full" style="height: auto;">
      <div class="container-fluid" style="background-color: #eceff3">
 	   <div class="info-center">
-           <h3>发表新文章</h3>
-           <form id="articleForm" >
+           <div class="panel panel-primary" style="margin-top: 10px">
+               <div class="panel-heading"><h3 class="panel-title">发布文章</h3></div>
+           </div>
+                <form id="articleForm" >
                <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
                    <div th:if="null ne ${content}">
                         <input class="form-control" th:value="${content.data.title}" placeholder="请输入文章标题（必须）" name="title" required/>
@@ -118,8 +120,8 @@
 
                <div class="clearfix"></div>
 
-               <div class="text-right" style="margin-bottom: 50px">
-                   <a class="btn btn-default waves-effect waves-light" href="/admin/article">返回列表</a>
+               <div class="text-right" style="margin-bottom: 50px;padding-right: 20px;">
+                   <a class="btn btn-default waves-effect waves-light" href="/admin/index/list">返回列表</a>
                    <button type="button" class="btn btn-primary waves-effect waves-light" onclick="subArticle('publish');">
                        保存文章
                    </button>
