--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
@@ -17,7 +17,7 @@
 	   <div class="info-center" >
            <div class="panel panel-primary" style="margin-top: 10px;margin-right: 20px;">
                <div class="panel-heading"><h3 class="panel-title">文章管理</h3></div>
-           <table class="table table-bordered" style="background-color: #eceff3">
+           <table class="table table-bordered" style="background-color: #eceff3;">
                <thead>
                    <tr>
                        <th>文章标题</th>
