--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
@@ -151,7 +151,7 @@
            //如果不是，则不进行处理
        }else{
 
-           //是来自编辑的请求，将值设置对应的编辑器
+           //是来自编辑的请求，将值设置进对应的编辑器
            var type = $(".content_type").val();
            if(type == "html"){
                //将markdown编辑器隐藏
