--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
@@ -17,26 +17,22 @@
         <p class="q-fans"> 粉丝：<a href="/" target="_blank">167</a></p>
         <p class="q-fans">总浏览数：<a href="/" target="_blank" >888</a></p>
     </div>
-    <section class="newpic">
-        <h2>最新照片</h2>
-        <ul>
-            <li><a href="/"><img src="/images/01.jpg"></a></li>
-            <li><a href="/"><img src="/images/02.jpg"></a></li>
-            <li><a href="/"><img src="/images/03.jpg"></a></li>
-            <li><a href="/"><img src="/images/04.jpg"></a></li>
-            <li><a href="/"><img src="/images/05.jpg"></a></li>
-            <li><a href="/"><img src="/images/06.jpg"></a></li>
-            <li><a href="/"><img src="/images/07.jpg"></a></li>
-            <li><a href="/"><img src="/images/08.jpg"></a></li>
+    <section >
+        <h2>最新文章</h2>
+        <ul >
+           <li class="q-fans"><a href="/index/post/149">测试草稿</a></li>
+           <li class="q-fans"><a href="/index/post/150">测试草稿</a></li>
+           <li class="q-fans"><a href="/index/post/151">测试草稿</a></li>
+           <li class="q-fans"><a href="/index/post/152">测试草稿</a></li>
         </ul>
     </section>
-    <section class="taglist">
+    <section >
         <h2>全部标签</h2>
         <ul>
-            <li><a href="/">青空</a></li>
-            <li><a href="/">情感聊吧</a></li>
-            <li><a href="/">study</a></li>
-            <li><a href="/">青青唠叨</a></li>
+            <label ><a href="/">青空</a></label>
+            <label><a href="/">情感聊吧</a></label>
+            <label><a href="/">study</a></label>
+            <label><a href="/">青青唠叨</a></label>
         </ul>
     </section>
 </aside>
