--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/other/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/other/index.html
@@ -16,7 +16,7 @@
 
     <script src="https://moguos.oss-cn-shenzhen.aliyuncs.com/lolimeow/assets/vendor/jquery/jquery.min.js"></script>
     <meta name="keywords" content="WordPress,WordPress插件,WordPress主题,whmcs主题,whmcs插件,html模板,php,前端开发,免费资源,优惠分享,typehco">
-    <meta name="description" itemprop="description" itemprop="name" content="猫可喵是一个基于内容分享,创作与灵感结合折腾的笔记博客">
+    <meta name="description" itemprop="description" content="猫可喵是一个基于内容分享,创作与灵感结合折腾的笔记博客">
 </head>
 <body>
 <header class="header-global">
