--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
@@ -15,15 +15,14 @@
         </div>
         <div class="top-header">
             <div class="container" style="margin-bottom: -60px">
-                <div class="site-branding" >
+                <div class="site-branding" style="margin-left: 14%">
 
                     <h1 class="site-title">
-                        <a href="http://localhost/wordpress/" rel="home" style="color: white;">静心听雨</a></h1>
+                        <a href="/index/page/1" rel="home" style="color: white;">静心听雨</a></h1>
                     <p class="site-description">做一个阳光的男生。。。</p>
                     <div style="color: white;padding-left: 30px">
-                        <a style="color: white;" href="#" class="site-description" >关于</a>
-                        <a style="color: white;" href="#" class="site-description" >归档</a>
-                        <a style="color: white;" href="#" class="site-description" >友链</a>
+                        <a style="color: white;" href="#" class="site-description" >关于 /</a>
+                        <a style="color: white;" href="#" class="site-description" >&nbsp;个人空间</a>
                     </div>
                 </div><!-- .site-branding -->
                 <div style="float: right;max-width: 400px;margin-right: 10%;margin-top: 5%">
