--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/left.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+
 <body>
     <aside th:fragment="left" id="secondary" class="widget-area" role="complementary">
-    <section id="search-2" class="widget widget_search"><form method="get" class="search-form" id="search-form" action="http://localhost/wordpress/">
-        <div class="top-section-search">
-            <input type="search" value="" name="s" id="s" placeholder="Search &hellip;" />
-            <input type="submit" value="search" class="search-subimit" />
-        </div>
-    </form></section>		<section id="recent-posts-2" class="widget widget_recent_entries">		<div class="title-widget"><h2 class="widget-title">近期文章</h2></div>		<ul>
+    <section id="search-2" class="widget widget_search">
+        <form class="search-form" id="search-form">
+            <div class="top-section-search" style="color: white;">
+                <input type="search" value="" name="q" id="q" placeholder="Search &hellip;" />
+                <button onclick="search()" style="margin-left: 5px;background-color: black;border-radius: 6px" value="search" type="button" class="btn">search</button>
+            </div>
+        </form>
+    </section>		<section id="recent-posts-2" class="widget widget_recent_entries">		<div class="title-widget"><h2 class="widget-title">近期文章</h2></div>		<ul>
     <li>
         <a href="http://localhost/wordpress/2018/11/11/8/">(无标题)</a>
     </li>
@@ -26,10 +30,12 @@
     <li><a href='http://localhost/wordpress/2018/11/'>2018年十一月</a></li>
 </ul>
 </section>
-    <section id="categories-2" class="widget widget_categories"><div class="title-widget"><h2 class="widget-title">分类目录</h2></div>		<ul>
-        <li class="cat-item cat-item-1"><a href="http://localhost/wordpress/category/uncategorized/" >未分类</a>
-        </li>
-    </ul>
+    <section id="categories-2" class="widget widget_categories"><div class="title-widget"><h2 class="widget-title">友情链接</h2></div>
+        <ul>
+         <li class="cat-item cat-item-1">
+             <a href="https://listeningrain.cn" target="_blank">静心听雨的博客</a>
+         </li>
+       </ul>
     </section>
 </aside>
 </body>
