完成新模板关于页面的开发

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
@@ -32,11 +32,10 @@
                     <article id="post-6" class="post-8 post type-post status-publish format-standard hentry category-uncategorized">
 
                         <header class="entry-header" style="margin-top: -20px">
-                            <h2 class="entry-title"><a rel="bookmark"><label th:text="${content.data.title}"></label></a></h2>
+                            <h2 class="entry-title"><a rel="bookmark"><label th:text="${content.data.name}"></label></a></h2>
                             <div class="entry-meta">
                                 <span class="poston">Posted on <a rel="bookmark"><time class="entry-date published updated"><label th:text="${content.data.created}"></label></time></a></span>
                                 <span class="poston">By <a rel="bookmark"><time class="entry-date published updated">静心听雨</time></a></span>
-                                <span class="poston">&nbsp;&nbsp;浏览量: <a rel="bookmark"><time class="entry-date published updated"><label th:text="${content.data.hits}"></label></time></a></span><span class="post-by"> 评论数: <span class="author vcard"><a class="url fn n"><label th:text="${content.data.commentsNum}"></label></a></span></span>
                             </div><!-- .entry-meta -->
 
                             <div class="entry-content" style="margin-top: -10px">
