--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
@@ -21,7 +21,7 @@
                         <a href="/index/page/1" rel="home" style="color: white;">静心听雨</a></h1>
                     <p class="site-description">做一个阳光的男生。。。</p>
                     <div style="color: white;padding-left: 30px">
-                        <a style="color: white;" href="#" class="site-description" >关于 /</a>
+                        <a style="color: white;" href="/index/about" class="site-description" >关于 /</a>
                         <a style="color: white;" href="#" class="site-description" >&nbsp;个人空间</a>
                     </div>
                 </div><!-- .site-branding -->
