完成个人信息的动态显示

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
@@ -29,6 +29,10 @@
                     <a href="/admin/index/classify"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">分类管理</span></a>
                 </li>
                 <li>
+                    <div class="showtitle" style="width:100px;"><img src="/admin_/img/leftimg.png" />首页名言管理</div>
+                    <a href="/admin/index/motto"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">首页名言管理</span></a>
+                </li>
+                <li>
                     <div class="showtitle" style="width:100px;"><img src="/admin_/img/leftimg.png" />评论管理</div>
                     <a href="identify.html"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">评论管理</span></a>
                 </li>
